--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,26 @@
+body {
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: up;
+  min-height: 100vh;
+  background: #000;
+}
 
-h1 {
-    text-shadow: 1px 2px 5px red, -1px -2px -5px green;
+h2 {
+  font-size: 6em;
+  font-weight: 400;
+  color: #222;
+  letter-spacing: 10px;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: 0.5s;
 }
-p {
-  font-size: 50px;
-  color: white;
-}
-.class1{
-    font-size: 70px;
-    color: yellow;
-}
-.class2{
-  font-size: 100px;
-  color: red;
-}
-.class3{
-  font-size: 100px;
-  color: purple;
+
+h2:hover {
+  color: #fff;
+  text-shadow: 0 0 5px #03e9f4,
+   0 0 25px #03e9f4,
+   0 0 50px #03e9f4,
+   0 0 100px #03e9f4;
 }
