--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Poppins", sans-serif;
-  display: flex;
   justify-content: center;
   align-items: up;
   min-height: 100vh;
@@ -8,10 +7,10 @@ body {
 }
 
 h2 {
-  font-size: 6em;
-  font-weight: 400;
+  font-size: 5em;
+  font-weight: 300;
   color: #222;
-  letter-spacing: 10px;
+  letter-spacing: 8px;
   cursor: pointer;
   text-transform: uppercase;
   transition: 0.5s;
@@ -19,8 +18,38 @@ h2 {
 
 h2:hover {
   color: #fff;
-  text-shadow: 0 0 10px #03e9f4,
+  text-shadow: 0 0 5px #03e9f4,
    0 0 25px #03e9f4,
    0 0 50px #03e9f4,
    0 0 100px #03e9f4;
 }
+
+b {
+  font-size: 35px;
+  color: pink;
+
+}
+
+img {
+  display: block;
+  margin: 0 right;
+}
+
+
+.class {
+  font-size: 3em;
+  font-weight: 400;
+  color: #222;
+  letter-spacing: 1px;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+.class:hover {
+  color: #fff;
+  text-shadow: 0 0 5px #03e9f4,
+   0 0 25px #03e9f4,
+   0 0 50px #03e9f4,
+   0 0 100px #03e9f4;
+
